--- a/treeNode.html
+++ b/treeNode.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Javascript研修</title>
+	<meta charset="UTF-8">
     </head>
     <body>
         <p id="p_id" class="data-test">
