--- a/treeNode2.html
+++ b/treeNode2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-    <head><title>Javascript研修</title></head><body><p id="p_id" class="data-test">今日は<strong>DOM編</strong>です</p><p id="p_id2">よろしくね</p><textarea id="rawArea" class="noLog" style="width:1050px; height:70px">
+    <head><title>Javascript研修</title><meta charset="UTF-8"></head><body><p id="p_id" class="data-test">今日は<strong>DOM編</strong>です</p><p id="p_id2">よろしくね</p><textarea id="rawArea" class="noLog" style="width:1050px; height:70px">
 &lt;!DOCTYPE HTML&gt;
 &lt;html&gt;
     &lt;head&gt;&lt;title&gt;Javascript研修&lt;/title&gt;&lt;/head&gt;&lt;body&gt;&lt;p id=&quot;p_id&quot; class=&quot;data-test&quot;&gt;今日は&lt;strong&gt;DOM編&lt;/strong&gt;です&lt;/p&gt;&lt;p id=&quot;p_id2&quot;&gt;よろしくね&lt;/p&gt;&lt;/body&gt;
