--- a/performance.html
+++ b/performance.html
@@ -5,6 +5,7 @@
             font-size: 20px;
         }
     </style>
+    <meta charset="UTF-8">
     <script src="js/performance.js" defer></script>
 </head>
 <body>
