--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <head>
     <style>
         * {
+            font-family: sans-serif;
             font-size: 40px;
         }
         a {
             display: block;
             text-align: center;
         }
+        
     </style>
 </head>
 <body>
