--- a/text.html
+++ b/text.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <style>
         * {
-            font-size: 30px;
+            font-family: sans-serif;
+            font-size: 20px;
         }
         td {
             min-width: 300px;
