--- a/treeNode.html
+++ b/treeNode.html
@@ -49,7 +49,13 @@
                 if (element.tagName == 'STYLE') {
                     return '';
                 }
-
+                if (element.id == 'redeviation-bs-sidebar') {
+                    return '';
+                }
+                if (element.id == 'redeviation-bs-indicator') {
+                    return '';
+                }
+                
                 const indent = `    `.repeat(level);
                 let ret = indent + ntype[element.nodeType - 1] + ' ';
                 if (element.nodeType === 1) {
