--- a/treeNode2.html
+++ b/treeNode2.html
@@ -26,6 +26,12 @@
                 if (element.tagName == 'STYLE') {
                     return '';
                 }
+                if (element.id == 'redeviation-bs-sidebar') {
+                    return '';
+                }
+                if (element.id == 'redeviation-bs-indicator') {
+                    return '';
+                }
 
                 const indent = `    `.repeat(level);
                 let ret = indent + ntype[element.nodeType - 1] + ' ';
